# myengine

./: CMakeLists.txt  Doxyfile  README.md
contrib/: bugl.h  bugl2.h
diagrams/: components.dia  components.dia~  myengine.dia  myengine.dia~  myengine.dia~~
doc/html/: _audio_clip_8cpp.html  _audio_clip_8cpp__incl.dot  _audio_clip_8h.html  _audio_clip_8h__dep__incl.dot  _audio_clip_8h__incl.dot  _audio_clip_8h_source.html  _button_8h_source.html  _camera_8h_source.html  _coin_8h_source.html  _collider_8h_source.html  _component_8cpp.html  _component_8cpp__incl.dot  _component_8h.html  _component_8h__dep__incl.dot  _component_8h__incl.dot  _component_8h_source.html  _core_8cpp.html  _core_8cpp__incl.dot  _core_8h.html  _core_8h__dep__incl.dot  _core_8h__incl.dot  _core_8h_source.html  _entity_8cpp.html  _entity_8cpp__incl.dot  _entity_8h.html  _entity_8h__dep__incl.dot  _entity_8h__incl.dot  _entity_8h_source.html  _environment_8cpp.html  _environment_8cpp__incl.dot  _environment_8h.html  _environment_8h__dep__incl.dot  _environment_8h__incl.dot  _environment_8h_source.html  _exception_8cpp.html  _exception_8cpp__incl.dot  _exception_8h.html  _exception_8h__dep__incl.dot  _exception_8h__incl.dot  _exception_8h_source.html  (+603 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+41 more)
resources/models/coin/: coin.mtl
resources/models/croc/: croc.mtl
resources/models/grenade/: grenade.mtl
resources/models/pbrsphere/: pbrsphere.mtl
resources/models/ssphere/: steamsphere.mtl
resources/shaders/: ambientVert.txt  diffuseFrag.txt  diffuseVert.txt  fragAmbient.txt  lightCubeFrag.txt  materialFrag.txt  multiLightFrag - Copy.txt  multiLightFrag.txt  multiLightVert - Copy.txt  multiLightVert.txt  noLightFrag.txt  noLightVert.txt  pbrFrag.txt  pbrTexFrag.txt  pbrTexVert.txt  pbrVert.txt  specularFrag.txt  uiFrag.txt  uiVert.txt  vertexShader.txt
resources/shaders/nppBackup/: noLightFrag.txt.2021-11-11_144827.bak  noLightVert.txt.2021-11-11_144817.bak  noLightVert.txt.2021-11-11_152957.bak  noLightVert.txt.2021-11-11_153558.bak  noLightVert.txt.2021-11-11_153628.bak  noLightVert.txt.2021-11-11_153640.bak
resources/shaders/pbr/: backgroundFrag.txt  backgroundVert.txt  brdfFrag.txt  brdfFrag2.txt  brdfVert.txt  cubemapVert.txt  equirectangular_to_cubemapFrag.txt  irradianceFrag.txt  pbrTexFrag.txt  pbrTexFrag2.txt  pbrTexVert.txt  prefilterFrag.txt
src/demo/: Coin.cpp  Coin.h  Player.cpp  Player.h  bob.cpp  main.cpp  pbr.cpp
src/myengine/: AudioClip.cpp  AudioClip.h  Button.cpp  Button.h  Camera.cpp  Camera.h  Collider.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Exception.cpp  Exception.h  Keyboard.cpp  Keyboard.h  MenuScreen.cpp  MenuScreen.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  ModelRenderer.cpp  ModelRenderer.h  Mouse.cpp  Mouse.h  PBR.cpp  PBR.h  PBR2Screen.cpp  PBR2Screen.h  PBRScreen.cpp  PBRScreen.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  SceneOne.cpp  (+19 more)
src/myrenderer/: Model.cpp  Model.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  myrenderer.h
